[package]
name = "tempcore-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "tempcore_monitor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "~2.0", features = [] }

[dependencies]
tauri    = { version = "~2.0", features = [] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo  = "0.32"

# NVIDIA GPU sensors — Windows only, loaded dynamically at runtime
[target.'cfg(windows)'.dependencies]
nvml-wrapper = "0"

[profile.release]
panic        = "abort"
codegen-units = 1
lto          = true
opt-level    = "s"
strip        = true
